k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: proxy
  name: proxy
  namespace: openai-proxy
spec:
  replicas: 10
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        io.kompose.service: proxy
    spec:
      containers:
        - image: ghcr.io/fhswf/openai-proxy:sha-52472c6
          name: proxy
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 2Gi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /ip
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: ca-certs
              mountPath: /etc/certs
      volumes:
        - name: ca-certs
          configMap:
            name: proxy-config
            items:
              - key: node.extra_ca_certs
                path: geant.crt
      restartPolicy: Always
status: {}
