k8s/mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kubernetes.service: mongodb
    io.kubernetes.part-of: openai-proxy
  name: mongodb
  namespace: openai-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openai-proxy
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mongodb
        app: openai-proxy
        tier: mongodb
    spec:
      containers:
        - image: mongo:5.0.25
          name: mongodb
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: data
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 250m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongodb-pvc
