k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
  namespace: openai-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: proxy
    spec:
      containers:
        - image: ghcr.io/fhswf/openai-proxy:latest
          name: proxy
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
