k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
  labels:
    io.kompose.service: proxy
  name: proxy
  namespace: openai-proxy
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: proxy
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: openai-proxy
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[CONNECTED] == true"
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongodb
  type: ClusterIP
