k8s/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: openai-proxy
  name: openai-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /openai/api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: openai-proxy
  name: api-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxy-login.ki.fh-swf.de
  namespace: openai-proxy
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`login.ki.fh-swf.de`) && PathPrefix(`/openai/api`)
      priority: 10
      services:
        - kind: Service
          name: proxy
          namespace: openai-proxy
          port: 3000
      middlewares:
        - name: openai-stripprefix
  tls:
    certResolver: default
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: openai-proxy-api-stripprefix@kubernetescrd
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
  name: openai.ki.fh-swf.de-backend
  namespace: openai-proxy
spec:
  rules:
  - host: openai.ki.fh-swf.de
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 3000
        path: /api
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: "K!mpuls-Chatbot"
      interval: 1m
      conditions:
        - "[STATUS] == 200"
        - "[CERTIFICATE_EXPIRATION] > 72h"
  name: openai.fh-swf.cloud-backend
  namespace: openai-proxy
spec:
  rules:
  - host: openai.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 3000
        path: /api
        pathType: Prefix
